--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
   - gem update --system
   - gem update bundler
 
+before_script:
+  - jbundle install
+
 script: 'bundle exec rake test:spec test:remote:spec'
 
 notifications:
