--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - gem update bundler
 
 before_script:
-  - jbundle install
+  - bundle exec jbundle install
 
 script: 'bundle exec rake test:spec test:remote:spec'
 
